Added tab in textarea JS, footer typo, new has now textarea + save button

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <ul class="nav nav-pilles">
+  <ul class="nav nav-tabs">
     <li role="presentation"><a href="/">New</a></li>
     <li role="presentation"><a href="/all">All Posts</a></li>
   </ul>
