--- a/templates/new.html
+++ b/templates/new.html
@@ -1,3 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="row">
+  <div class="col-md-12">
+      <textarea class="width-100" name="input_field" cols="60" rows="20"></textarea>
+  </div>
+  <div class="col-md-8">
+    <p class="inline">Share this link: </p><p class="inline">TBD</p>
+  </div>
+  <div class="col-md-4">
+    <button type="button" class="btn btn-default navbar-btn">Save</button>
+  </div>
+</div>
 {% endblock %}
