--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,16 @@
     <title>Pasty - a pastebot</title>
     <meta name="author" content="Anastassios Martakos" \>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/base.css" \>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   </head>
   <body>
     {% include 'nav.html' %}
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+      {% block content %}
+      {% endblock %}
+    </div>
     {% include 'footer.html' %}
+    <script src="/static/js/tab_ta.js"></script>
   </body>
 </html>
