Added markdown to html JS script, preview button implemented

--- a/templates/new.html
+++ b/templates/new.html
@@ -1,14 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row">
-  <div class="col-md-12">
+  <div id="edit-area" class="col-md-12">
       <textarea class="width-100" name="input_field" cols="60" rows="20"></textarea>
+  </div>
+  <div id="preview-area" style="display: none;">
   </div>
   <div class="col-md-8">
     <p class="inline">Share this link: </p><p class="inline">TBD</p>
   </div>
   <div class="col-md-4">
-    <button type="button" class="btn btn-default navbar-btn">Save</button>
+    <div class="float-right">
+      <button id="save" type="button" class="btn btn-default navbar-btn">Save</button>
+      <button id="preview" data-mode="edit" type="button" class="btn btn-default navbar-btn">Preview</button>
+    </div>
   </div>
 </div>
 {% endblock %}
