--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,14 @@
-<nav>
-  <ul class="nav nav-tabs">
-    <li role="presentation"><a href="/">New</a></li>
-    <li role="presentation"><a href="/all">All Posts</a></li>
-  </ul>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">Pasty</a>
+    </div>
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="/">New</a></li>
+        <li><a href="/all">All Posts</a></li>
+      </ul>
+    </div>
+  </div> <!-- container-fluid -->
 </nav>
