--- a/templates/new.html
+++ b/templates/new.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row">
-  <div id="edit-area" class="col-md-12">
-      <textarea class="width-100" name="input_field" cols="60" rows="20"></textarea>
-  </div>
-  <div id="preview-area" style="display: none;">
+  <div class="col-md-12">
+    <div id="edit-area" class="form-group">
+      <textarea id="input-area" class="width-100 form-control" name="input_field"></textarea>
+    </div>
+    <div  class="form-group">
+      <div id="preview-area" class="form-control" style="display: none;"></div>
+    </div>
   </div>
   <div class="col-md-8">
     <p class="inline">Share this link: </p><p class="inline">TBD</p>
