Do not show pasty link when it is still TBD

--- a/templates/new.html
+++ b/templates/new.html
@@ -10,7 +10,9 @@
     </div>
   </div>
   <div class="col-md-8">
-    <p class="inline">Share this link: </p><p class="inline">TBD</p>
+    <div style="display: none;">
+      <p class="inline">Share this link: </p><p id="pasty-link" class="inline">TBD</p>
+    </div>
   </div>
   <div class="col-md-4">
     <div class="float-right">
