--- a/templates/new.html
+++ b/templates/new.html
@@ -2,8 +2,13 @@
 {% block content %}
 <div class="row">
   <div class="col-md-12">
+    <div class="form-group">
+      <input id="post-title" type="text" class="form-control" placeholder="Post Title" aria-describedby="basic-addon2">
+    </div>
+  </div>
+  <div class="col-md-12">
     <div id="edit-area" class="form-group">
-      <textarea id="input-area" class="width-100 form-control" name="input_field"></textarea>
+      <textarea id="input-area" placeholder="Post Content" class="width-100 form-control" name="input_field"></textarea>
     </div>
     <div  class="form-group">
       <div id="preview-area" class="form-control" style="display: none;"></div>
