--- a/templates/post.html
+++ b/templates/post.html
@@ -1,17 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
+<input id="mode-control" type="hidden" data-initial-view-mode="{{ view_mode }}">
 <div class="row">
   <div class="col-md-12">
     <div class="form-group">
-      <input id="post-title" type="text" class="form-control" placeholder="Post Title" aria-describedby="basic-addon2">
+      <input id="post-title" type="text" class="form-control" placeholder="Post Title" aria-describedby="basic-addon2" value="{{ post_title }}">
     </div>
   </div>
   <div class="col-md-12">
     <div id="edit-area" class="form-group">
-      <textarea id="input-area" placeholder="Post Content" class="width-100 form-control" name="input_field"></textarea>
+      <textarea id="input-area" placeholder="Post Content" class="width-100 form-control" name="input_field">{{ post_content }}</textarea>
     </div>
     <div  class="form-group">
-      <div id="preview-area" class="form-control" style="display: none;"></div>
+      <div id="preview-area" class="form-control" style="display: none;">{{ post_content }}</div>
     </div>
   </div>
   <div class="col-md-8">
