viewer can now edit message

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <input id="mode-control" type="hidden" data-initial-view-mode="{{ view_mode }}">
+<input id="post-id" type="hidden" data-post-id="{{ post_id }}">
 <div class="row">
   <div class="col-md-12">
     <div class="form-group">
