link is now an actual link

--- a/templates/post.html
+++ b/templates/post.html
@@ -18,7 +18,7 @@
   </div>
   <div class="col-md-8">
     <div style="display: none;">
-      <p class="inline">Share this link: </p><p id="pasty-link" class="inline">TBD</p>
+      <p class="inline">Share this link: </p><a href="TBD" id="pasty-link" class="inline" target="_blank">TBD</a>
     </div>
   </div>
   <div class="col-md-4">
