Sticky footer and added infos to footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,7 @@
-<footer>
-  <p>Placeholder</p>
+<footer class="footer">
+  <div class="container">
+    <br>
+    <p>Copyright 2016 Anastassios Martakos</p>
+    <a href="#">GitHub</a>
+  </div>
 </footer>
