--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,53 @@ hr {
   margin: 0
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 10em;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 10em;
+  margin-top: 10px;
+  background-color: #607D8B;
+}
+
+footer > div > p,footer > div > a {
+  color: #B0BEC5;
+}
+
+footer > div > a:hover {
+  color: #CFD8DC;
+}
+
+.navbar-default {
+  background-color: #607D8B;
+}
+
+.navbar-default .navbar-brand {
+  color: #B0BEC5;
+}
+
+.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
+  color: #ECEFF1;
+  cursor: default;
+}
+
+.navbar-default .navbar-nav>li>a {
+  color: white;
+}
+
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
+  color: ·#CFD8DC;
+}
+
 .inline {
   display: inline-block;
 }
