--- a/templates/all.html
+++ b/templates/all.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>List of all Posts:</h1>
+{% if posts|length == 0 %}
+<div class="row">
+  <div class="col-md-12">
+    <p>There are no posts. Pasty is sad :-(</p>
+  </div>
+</div>
+{% endif %}
 {% for post in posts %}
 <div class="row">
   <div class="col-md-10">
