list all posts works again with new URL schema

--- a/templates/all.html
+++ b/templates/all.html
@@ -23,7 +23,7 @@
         <p>{{ post['time'] }}</p>
       </div>
       <div class="col-md-2">
-        <a class="float-right" href="/get/{{ post['link'] }}" target="_blank">{{ post['hash'] }}</a>
+        <a class="float-right" href="/get/{{ post['link'] }}" target="_blank">{{ post['id'] }}</a>
       </div>
     </div>
     <hr>
