Removed border radius in nav

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,6 +28,10 @@ footer > div > a:hover {
   color: #CFD8DC;
 }
 
+.navbar {
+  border-radius: 0px;
+}
+
 .navbar-default {
   background-color: #607D8B;
 }
