--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,14 +1,21 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand">Pasty</a>
-    </div>
+  <div class="navbar-inner">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#pasty-nav">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand">Pasty</a>
+      </div>
 
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="/">New</a></li>
-        <li><a href="/all">All Posts</a></li>
-      </ul>
-    </div>
-  </div> <!-- container-fluid -->
+      <div id="pasty-nav" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="/">New</a></li>
+          <li><a href="/all">All Posts</a></li>
+        </ul>
+      </div>
+    </div> <!-- container -->
+  </div> <!-- navbar-inner -->
 </nav>
