transparent border when in mobile version in nav

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -65,6 +65,10 @@ footer > div > a:hover {
   border-color: transparent;
 }
 
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+  border-color: transparent;
+}
+
 .inline {
   display: inline-block;
 }
