--- a/static/css/base.css
+++ b/static/css/base.css
@@ -106,3 +106,7 @@ footer > div > a:hover {
 #all-posts > div > div > p {
   margin: 0;
 }
+
+#all-posts > div > div > a {
+  word-break: break-all;
+}
