--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,6 +2,6 @@
   <div class="container">
     <br>
     <p>Copyright 2016 Anastassios Martakos</p>
-    <a href="#">GitHub</a>
+    <a href="https://github.com/realm01/pasty" target="_blank">GitHub</a>
   </div>
 </footer>
