--- a/templates/post.html
+++ b/templates/post.html
@@ -16,12 +16,19 @@
       <div id="preview-area" class="form-control" style="display: none;">{{ post_content }}</div>
     </div>
   </div>
-  <div class="col-md-8">
-    <div style="display: none;">
-      <p class="inline">Share this link: </p><a href="TBD" id="pasty-link" class="inline" target="_blank">TBD</a>
+  <div class="col-md-9 col-sm-9  col-xs-7">
+    <div id="link-container" style="display: none;">
+      <div class="row">
+        <div class="col-md-2 col-sm-2 col-xs-2">
+          <p class="inline">Share this link: </p>
+        </div>
+        <div class="col-md-10 col-sm-10 col-xs-10">
+          <a href="TBD" id="pasty-link" class="inline word-break" target="_blank">TBD</a>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3 col-sm-3 col-xs-5">
     <div class="float-right">
       <button id="save" type="button" class="btn btn-default navbar-btn">Save</button>
       <button id="preview" data-mode="edit" type="button" class="btn btn-default navbar-btn">Preview</button>
