Added html info, error and success messages, JS err handling

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -97,6 +97,12 @@ footer > div > a:hover {
   word-break: break-all;
 }
 
+.messager-container {
+  position: fixed;
+  bottom: 0;
+  right: 10px;
+}
+
 #preview-area,#input-area {
   min-height: 40em;
   height: 100%;
