--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
     <br>
     <br>
     {% include 'footer.html' %}
+    {% include 'exception.html' %}
+    {% include 'neutral_msg.html' %}
+    {% include 'success.html' %}
     <script src="/static/js/tab_ta.js"></script>
   </body>
 </html>
