Get posts with display mode specified, JS displaying integrated in this new feature

--- a/templates/post.html
+++ b/templates/post.html
@@ -7,7 +7,7 @@
     <div class="input-group">
       <input id="post-title" type="text" class="form-control" placeholder="Post Title" aria-describedby="basic-addon2" value="{{ post_title }}">
       <div class="input-group-btn">
-        <button id="display-mode" data-display-mode="0" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="display-mode-text">Markdown</span> <span class="caret"></span></button>
+        <button id="display-mode" data-display-mode="{% if post_mode == None %}0{% else %}{{ post_mode }}{% endif %}" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="display-mode-text">Markdown</span> <span class="caret"></span></button>
         <ul id="display-mode-selector" class="dropdown-menu dropdown-menu-right">
           <li><a data-display-mode="0" href="#">Markdown</a></li>
           <li><a data-display-mode="1" href="#">Plain Code</a></li>
