--- a/templates/all.html
+++ b/templates/all.html
@@ -14,17 +14,31 @@
     <h4>{{ post['time'] }}</h4>
   {% else %}
     <div class="row">
-      <div class="col-md-6 col-sm-4 col-xs-4">
+      <div class="col-md-4 col-sm-4 col-xs-4">
         <p>{{ post['title'] }}</p>
       </div>
-      <div class="col-md-2 col-sm-2 col-xs-2">
-        <p>Created at:</p>
+      <div class="col-md-1 col-sm-1 col-xs-1">
+        <p>
+          {% if post['user'] != None %}
+            From:
+          {% endif %}
+        </p>
       </div>
       <div class="col-md-1 col-sm-1 col-xs-2">
+        <p>
+          {% if post['user'] != None %}
+            {{ post['user'] }}
+          {% endif %}
+        </p>
+      </div>
+      <div class="col-md-1 col-sm-1 col-xs-1">
+        <p>Time:</p>
+      </div>
+      <div class="col-md-1 col-sm-1 col-xs-1">
         <p>{{ post['time'] }}</p>
       </div>
-      <div class="col-md-3 col-sm-5 col-xs-4">
-        <a class="float-right" href="/get/{{ post['link'] }}" target="_blank">{{ post['id'] }}</a>
+      <div class="col-md-4 col-sm-4 col-xs-3">
+        <a class="float-right" href="/get/{{ post['link'] }}" target="_blank">Link</a>
       </div>
     </div>
     <hr>
