--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
   </head>
   <body>
+    {% include 'modal.html' %}
     {% include 'nav.html' %}
     <div class="container">
       {% block content %}
