--- a/templates/all.html
+++ b/templates/all.html
@@ -13,7 +13,7 @@
   {% if post['link'] == None %}
     <h4>{{ post['time'] }}</h4>
   {% else %}
-    <div class="row">
+    <div class="row test">
       <div class="col-md-4 col-sm-4 col-xs-4">
         <p>{{ post['title'] }}</p>
       </div>
