--- a/templates/all.html
+++ b/templates/all.html
@@ -15,7 +15,8 @@
   {% else %}
     <div class="row test">
       <div class="col-md-4 col-sm-4 col-xs-4">
-        <p>{{ post['title'] }}</p>
+        <input class="to-be-deleted inline" type="checkbox" aria-label="...">
+        <p class="inline">{{ post['title'] }}</p>
       </div>
       <div class="col-md-1 col-sm-1 col-xs-1">
         <p>
@@ -37,7 +38,7 @@
       <div class="col-md-1 col-sm-1 col-xs-1">
         <p>{{ post['time'] }}</p>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-3">
+      <div class="col-md-4 col-sm-4 col-xs-3 link_div">
         <a class="float-right" href="/get/{{ post['link'] }}" target="_blank">Link</a>
       </div>
     </div>
@@ -45,4 +46,12 @@
   {% endif %}
 {% endfor %}
 </div>
+{% if posts|length != 0 %}
+<br>
+<div class="btn-group btn-group-justified" role="group" aria-label="...">
+  <div class="btn-group" role="group">
+    <button id="delete-selected" type="button" data-toggle="modal" data-target="#pasty-modal" class="btn btn-default btn-danger">Delete Selected</button>
+  </div>
+</div>
+{% endif %}
 {% endblock %}
