Implemented file upload in browser and in server, now I have to bug fix, and it is not fully implemented just the base

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -107,6 +107,10 @@ footer > div > a:hover {
   margin-left: 0.5em;
 }
 
+.margin-bottom-1 {
+  margin-bottom: 0.5em;
+}
+
 button.width-19 {
   width: 19%;
 }
