--- a/templates/post.html
+++ b/templates/post.html
@@ -41,6 +41,15 @@
     </div>
   </div>
   <div class="col-md-12">
+    <h4>Attach files</h4>
+    <form id="files" enctype="multipart/form-data">
+      <input class="single-file margin-bottom-1" type="file">
+    </form>
+    <div class="input-group">
+      <button type="button" id="attach-more" type="button" class="btn btn-default">Add another file</button>
+    </div>
+  </div>
+  <div class="col-md-12">
     <div id="link-container" style="display: none;">
       <div class="row">
         <div class="col-md-2 col-sm-2 col-xs-2">
