--- a/templates/files.html
+++ b/templates/files.html
@@ -1,6 +1,9 @@
 {% for file in files %}
 <div class="row">
-  <div class="col-md-8 col-sm-8 col-xs-8"><p>{{ file.name }}</p></div>
-  <div class="col-md-4 col-sm-4 col-xs-4"><a class="float-right" href="{{ file.link }}" target="_blank">Download</a></div>
+  <div class="col-md-6 col-sm-6 col-xs-6"><p style="margin: 10px 0 10px 0;">{{ file.name }}</p></div>
+  <div class="col-md-6 col-sm-6 col-xs-6">
+    <a class="float-right btn btn-default margin-left-1" href="{{ file.link }}" target="_blank">Download</a>
+    <a class="float-right btn btn-danger" href="{{ file.dellink }}" target="_blank">Delete</a>
+  </div>
 </div>
 {% endfor %}
