--- a/templates/modal.html
+++ b/templates/modal.html
@@ -8,7 +8,7 @@
       <div id="modal-body" class="modal-body">
       </div>
       <div class="modal-footer">
-        <button id="modal-yes" data-modal-data="" data-redirect="" type="button" class="btn btn-default" data-dismiss="modal">Yes</button>
+        <button id="modal-yes" data-modal-method="" data-modal-data="" data-redirect="" type="button" class="btn btn-default" data-dismiss="modal">Yes</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
       </div>
     </div>
