--- a/templates/post.html
+++ b/templates/post.html
@@ -41,6 +41,9 @@
     </div>
   </div>
   <div class="col-md-12">
+    {% include 'progressionbar.html' %}
+  </div>
+  <div class="col-md-12">
     <h4>Saved Files</h4>
     <div id="file-container">
       {% if files|length > 0 %}
