--- a/templates/post.html
+++ b/templates/post.html
@@ -25,15 +25,16 @@
     </div>
   </div>
   <div class="col-md-12">
-    <div class="btn-group width-100" role="group">
+    <div class="input-group btn-group width-100" role="group">
       <div class="btn-group width-43" role="group">
-        <button id="irc_channel_selected" data-irc-channel="{{ irc['selected'] }}" type="button" class="btn btn-default dropdown-toggle width-50" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="irc-selected">{{ irc['selected'] }}</span> <span class="caret"></span></button>
+        <button id="irc_channel_selected" data-irc-channel="{{ irc['selected'] }}" type="button" class="btn btn-default dropdown-toggle width-33" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span id="irc-selected">{{ irc['selected'] }}</span> <span class="caret"></span></button>
         <ul id="irc_channels" class="dropdown-menu dropdown-menu-left">
           {% for channel in irc['channels'] %}
             <li><a>{{ channel }}</a></li>
           {% endfor %}
         </ul>
-        <button type="button" id="save-and-post" type="button" class="btn btn-default width-50">Save/Post</button>
+        <input id="post-receiver" type="text" class="form-control width-33" placeholder="Receiver (Optional)" aria-describedby="basic-addon2">
+        <button type="button" id="save-and-post" type="button" class="btn btn-default width-33">Save/Post</button>
       </div>
       <button type="button" id="save" type="button" class="btn btn-default width-19">Save</button>
       <button type="button" id="preview" data-mode="edit" type="button" class="btn btn-default width-19">Preview</button>
