Posts: All: whole div is now clickable

--- a/templates/all.html
+++ b/templates/all.html
@@ -13,7 +13,7 @@
   {% if post['link'] == None %}
     <h4>{{ post['time'] }}</h4>
   {% else %}
-    <div class="row test">
+    <div class="row post-all-column">
       <div class="col-md-4 col-sm-4 col-xs-4">
         <input class="to-be-deleted inline" type="checkbox" aria-label="...">
         <p class="inline">{{ post['title'] }}</p>
