--- a/static/css/base.css
+++ b/static/css/base.css
@@ -140,6 +140,10 @@ div.width-43 {
   width: 43%;
 }
 
+div.post-all-column {
+  cursor: pointer;
+}
+
 #preview-area,#input-area {
   min-height: 40em;
   height: 100%;
