--- a/templates/all.html
+++ b/templates/all.html
@@ -13,30 +13,21 @@
   {% if post['link'] == None %}
     <h4>{{ post['time'] }}</h4>
   {% else %}
-    <div class="row post-all-column">
-      <div class="col-md-4 col-sm-4 col-xs-4">
-        <input class="to-be-deleted inline" type="checkbox" aria-label="...">
-        <p class="inline">{{ post['title'] }}</p>
+    <div class="row post-all-column" style="vertical-align: bottom;">
+      <div class="col-md-1 col-sm-2 col-xs-3 text-nowrap">
+        <input class="to-be-deleted inline no-pad-marg" type="checkbox" aria-label="...">
+        <p class="inline">{{ post['time'] }}</p>
       </div>
-      <div class="col-md-1 hidden-sm hidden-xs">
-        <p class="word-break">
-          {% if post['user'] != None %}
-            From:
-          {% endif %}
-        </p>
-      </div>
-      <div class="col-md-3 col-sm-2 col-xs-3">
-        <p>
+      <div class="col-md-1 col-sm-1 col-xs-2">
+        <p class="inline">
+          testuser
           {% if post['user'] != None %}
             {{ post['user'] }}
           {% endif %}
         </p>
       </div>
-      <div class="col-md-1 hidden-sm hidden-xs">
-        <p class="word-break">Time:</p>
-      </div>
-      <div class="col-md-2 col-sm-3 col-xs-2">
-        <p>{{ post['time'] }}</p>
+      <div class="col-md-9 col-sm-8 col-xs-5">
+        <p class="inline"><b>{{ post['title'] }}</b></p>
       </div>
       <div class="col-md-1 col-sm-1 col-xs-2 link_div">
         <a class="float-right" href="/get/{{ post['link'] }}" target="_blank">Link</a>
@@ -48,10 +39,19 @@
 </div>
 {% if posts|length != 0 %}
 <br>
-<div class="btn-group btn-group-justified" role="group" aria-label="...">
-  <div class="btn-group" role="group">
-    <button id="delete-selected" type="button" data-toggle="modal" data-target="#pasty-modal" class="btn btn-default btn-danger">Delete Selected</button>
+<div class="row">
+  <div class="col-md-4 col-sm-3 col-xs-1"></div>
+  <div class="col-md-4 col-sm-6 col-xs-10">
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+    <div class="btn-group" role="group">
+      <button id="select-all" type="button" class="btn btn-default btn-warning">Select All</button>
+    </div>
+    <div class="btn-group" role="group">
+      <button id="delete-selected" type="button" data-toggle="modal" data-target="#pasty-modal" class="btn btn-default btn-danger">Delete Selected</button>
+    </div>
   </div>
+  </div>
+  <div class="col-md-4 col-sm-3 col-xs-1"></div>
 </div>
 {% endif %}
 {% endblock %}
