Ctrl buttons are smaller in md

--- a/templates/post.html
+++ b/templates/post.html
@@ -106,12 +106,16 @@
   <!-- Control bar -->
 
   <div class="col-md-12">
-    <div class="input-group btn-group width-100" role="group">
-      <button type="button" id="save-and-post" type="button" class="btn btn-default width-25">Save/Post</button>
-      <button type="button" id="save" type="button" class="btn btn-default width-25">Save</button>
-      <button type="button" id="preview" data-mode="edit" type="button" class="btn btn-default width-25">Preview</button>
-      <button type="button" id="delete" data-toggle="modal" data-target="#pasty-modal" type="button" class="btn btn-default width-25">delete</button>
-    </div>
+    <div class="row">
+      <div class="col-md-2 hidden-sm hidden-xs"></div>
+      <div class="col-md-8 col-sm-12 col-xs-12 input-group btn-group" role="group">
+        <button type="button" id="save-and-post" type="button" class="btn btn-default width-25">Save/Post</button>
+        <button type="button" id="save" type="button" class="btn btn-default width-25">Save</button>
+        <button type="button" id="preview" data-mode="edit" type="button" class="btn btn-default width-25">Preview</button>
+        <button type="button" id="delete" data-toggle="modal" data-target="#pasty-modal" type="button" class="btn btn-default width-25">delete</button>
+      </div>
+      <div class="col-md-2 hidden-sm hidden-xs"></div>
+    </div> <!-- row -->
   </div> <!-- col-md-12 -->
 
 </div>
