UI indication when trying to  delete an unsaved posts

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -103,6 +103,10 @@ footer > div > a:hover {
   right: 10px;
 }
 
+.high-z-index {
+  z-index: 10000;
+}
+
 input.no-pad-marg {
   margin: 0;
   padding: 0;
