--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
     {% include 'exception.html' %}
     {% include 'neutral_msg.html' %}
     {% include 'success.html' %}
+    {% include 'warning.html' %}
     <script src="/static/js/tab_ta.js"></script>
   </body>
 </html>
