--- a/templates/exception.html
+++ b/templates/exception.html
@@ -1,4 +1,4 @@
-<div id="error-container" class="messager-container alert alert-danger" role="alert" style="display: none;">
+<div id="error-container" class="messager-container alert alert-danger high-z-index" role="alert" style="display: none;">
   <p><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
   <span class="sr-only">Error:</span>
   <span id="error-text-field">Error msg</span></p>
