--- a/templates/modal.html
+++ b/templates/modal.html
@@ -9,7 +9,8 @@
       </div>
       <div class="modal-footer">
         <button id="modal-yes" data-modal-method="" data-modal-data="" data-redirect="" type="button" class="btn btn-default" data-dismiss="modal">Yes</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+        <button id="modal-no" type="button" class="btn btn-default" data-dismiss="modal">No</button>
+        <button id="modal-ok" style="display: none;" type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
       </div>
     </div>
   </div>
