--- a/templates/neutral_msg.html
+++ b/templates/neutral_msg.html
@@ -1,4 +1,4 @@
-<div id="neutral-msg-container" class="messager-container alert alert-info" role="alert" style="display: none;">
+<div id="neutral-msg-container" class="messager-container alert alert-info high-z-index" role="alert" style="display: none;">
   <p><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
   <span class="sr-only">Info:</span>
   <span id="neutral-msg-text-field">Info msg</span></p>
