--- a/templates/success.html
+++ b/templates/success.html
@@ -1,4 +1,4 @@
-<div id="success-container" class="messager-container alert alert-success" role="alert" style="display: none;">
+<div id="success-container" class="messager-container alert alert-success high-z-index" role="alert" style="display: none;">
   <p><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
   <span class="sr-only">Success:</span>
   <span id="success-text-field">success-text-field msg</span></p>
