Integrated the ace editor

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <script src="/static/js/controller.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.4.2/showdown.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js"></script>
   </head>
   <body>
     {% include 'modal.html' %}
@@ -28,6 +29,6 @@
     {% include 'neutral_msg.html' %}
     {% include 'success.html' %}
     {% include 'warning.html' %}
-    <script src="/static/js/tab_ta.js"></script>
+    <script src="/static/js/load_ace.js"></script>
   </body>
 </html>
