--- a/templates/post.html
+++ b/templates/post.html
@@ -38,7 +38,9 @@
 
   <div class="col-md-12">
     <div id="edit-area" class="form-group">
-      <textarea id="input-area" placeholder="Post Content" class="width-100 form-control" name="input_field">{{ post_content }}</textarea>
+      <!-- <textarea id="input-area" placeholder="Post Content" class="width-100 form-control" name="input_field">{{ post_content }}</textarea> -->
+
+      <div id="input-area">{{ post_content }}</div>
     </div>
     <div  class="form-group">
       <div id="preview-area" class="form-control" style="display: none;">{{ post_content }}</div>
