--- a/templates/post.html
+++ b/templates/post.html
@@ -45,6 +45,13 @@
     </div>
   </div> <!-- col-md-12 -->
 
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <input class="editor-settings" type="checkbox"><span style="padding-left: 4px;">Vim Bindings</span></input>
+      <input class="editor-settings" type="checkbox"><span style="padding-left: 4px;">Syntax Checking</span></input>
+    </div>
+  </div> <!-- col-md-12 -->
+
   <!-- File Upload -->
 
   <!-- progress bar -->
