--- a/templates/post.html
+++ b/templates/post.html
@@ -47,8 +47,8 @@
 
   <div class="col-md-12">
     <div class="panel panel-default">
-      <input class="editor-settings" type="checkbox"><span style="padding-left: 4px;">Vim Bindings</span></input>
-      <input class="editor-settings" type="checkbox"><span style="padding-left: 4px;">Syntax Checking</span></input>
+      <input id="vimmode" class="cookie-modifier editor-settings" type="checkbox"><span style="padding-left: 4px;">Vim Bindings</span></input>
+      <input id="syntax-checking" class="cookie-modifier editor-settings" type="checkbox"><span style="padding-left: 4px;">Syntax Checking</span></input>
     </div>
   </div> <!-- col-md-12 -->
 
