Added soft wrap

--- a/templates/post.html
+++ b/templates/post.html
@@ -49,6 +49,7 @@
     <div class="panel panel-default">
       <input id="vimmode" class="cookie-modifier editor-settings" type="checkbox"><span style="padding-left: 4px;">Vim Bindings</span></input>
       <input id="syntax-checking" class="cookie-modifier editor-settings" type="checkbox"><span style="padding-left: 4px;">Syntax Checking</span></input>
+      <input id="text-wrap" class="cookie-modifier editor-settings" type="checkbox"><span style="padding-left: 4px;">Text Wrap</span></input>
     </div>
   </div> <!-- col-md-12 -->
 
