Using newer cookie lib, fixed cookies not saving correctly

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.4.2/showdown.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js"></script>
-    <script src="/static/js/jquery.cookie.min.js"></script>
+    <script src="/static/js/js.cookie.min.js"></script>
   </head>
   <body>
     {% include 'modal.html' %}
