Feature: specify post sender

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -141,7 +141,7 @@ button.width-19 {
   width: 19%;
 }
 
-button.width-50,#post-receiver.width-50 {
+button.width-50,.width-50 {
   width: 50%;
 }
 
